--- a/TestExcel/TestExcel.csproj
+++ b/TestExcel/TestExcel.csproj
@@ -165,6 +165,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ImportExcelController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\TimeScheduleController.cs" />
     <Compile Include="Data\FACULTY.cs">
       <DependentUpon>SubjectDB.tt</DependentUpon>
@@ -555,6 +556,7 @@
     <Content Include="Views\Shared\_Navbar.cshtml" />
     <Content Include="Views\TimeSchedule\Index.cshtml" />
     <Content Include="Views\ImportExcel\Success.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
