--- a/TestExcel/Web.config
+++ b/TestExcel/Web.config
@@ -78,7 +78,7 @@
   </system.codedom>
   <connectionStrings>
   <!--<add name="TestExcelEntities" connectionString="metadata=res://*/Data.SubjectDB.csdl|res://*/Data.SubjectDB.ssdl|res://*/Data.SubjectDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KNIGHT-TEMPLAR\SQLEXPRESS;initial catalog=TestExcel;persist security info=True;user id=sa;password=Black090;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  <add name="TestExcelEntities" connectionString="metadata=res://*/Data.SubjectDB.csdl|res://*/Data.SubjectDB.ssdl|res://*/Data.SubjectDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-673L8TB\SQLEXPRESS;initial catalog=TestExcel;persist security info=True;user id=sa;password=Black090;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <add name="TestExcelEntities" connectionString="metadata=res://*/Data.SubjectDB.csdl|res://*/Data.SubjectDB.ssdl|res://*/Data.SubjectDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KNIGHT-TEMPLAR\SQLEXPRESS;initial catalog=TestExcel;persist security info=True;user id=sa;password=Black090;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
