--- a/TestExcel/TestExcel.csproj
+++ b/TestExcel/TestExcel.csproj
@@ -164,8 +164,10 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ClassRoomScheduleController.cs" />
     <Compile Include="Controllers\ImportExcelController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\TeacherScheduleController.cs" />
     <Compile Include="Controllers\TimeScheduleController.cs" />
     <Compile Include="Data\FACULTY.cs">
       <DependentUpon>SubjectDB.tt</DependentUpon>
@@ -561,9 +563,15 @@
     <Content Include="Views\TimeSchedule\Index.cshtml" />
     <Content Include="Views\ImportExcel\Success.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\TeacherSchedule\Building_62.cshtml" />
+    <Content Include="Views\TeacherSchedule\Building_63.cshtml" />
+    <Content Include="Views\TeacherSchedule\Building_69_64.cshtml" />
+    <Content Include="Views\TeacherSchedule\Building_65.cshtml" />
+    <Content Include="Views\TeacherSchedule\Building_42.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\ClassRoomSchedule\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
