--- a/TestExcel/TestExcel.csproj
+++ b/TestExcel/TestExcel.csproj
@@ -569,11 +569,8 @@
     <Content Include="Views\TimeSchedule\Index.cshtml" />
     <Content Include="Views\ImportExcel\Success.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
-    <Content Include="Views\ClassRoomSchedule\Building_62.cshtml" />
-    <Content Include="Views\ClassRoomSchedule\Building_63.cshtml" />
-    <Content Include="Views\ClassRoomSchedule\Building_69_64.cshtml" />
-    <Content Include="Views\ClassRoomSchedule\Building_65.cshtml" />
-    <Content Include="Views\ClassRoomSchedule\Building_42.cshtml" />
+    <Content Include="Views\ClassRoomSchedule\Building.cshtml" />
+    <Content Include="Views\ClassRoomSchedule\Results.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
