--- a/TestExcel/TestExcel.csproj
+++ b/TestExcel/TestExcel.csproj
@@ -572,6 +572,7 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\ClassRoomSchedule\Building.cshtml" />
     <Content Include="Views\ClassRoomSchedule\Results.cshtml" />
+    <Content Include="Views\Shared\_Sidebar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
