--- a/TestExcel/TestExcel.csproj
+++ b/TestExcel/TestExcel.csproj
@@ -165,6 +165,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\ImportExcelController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\TimeScheduleController.cs" />
@@ -581,6 +582,13 @@
     <Content Include="Views\Shared\_TimeScheduleLayout.cshtml" />
     <Content Include="Views\TimeSchedule\ClSchedule.cshtml" />
     <Content Include="Views\TimeSchedule\TeSchedule.cshtml" />
+    <Content Include="Views\Data\Section.cshtml" />
+    <Content Include="Views\Data\Subject.cshtml" />
+    <Content Include="Views\Data\Member.cshtml" />
+    <Content Include="Views\Data\Professor.cshtml" />
+    <Content Include="Views\Data\Department.cshtml" />
+    <Content Include="Views\Data\Building.cshtml" />
+    <Content Include="Views\Data\Branch.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
