--- a/TestExcel/TestExcel.csproj
+++ b/TestExcel/TestExcel.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Models\Section_Subject.cs" />
     <Compile Include="Models\SemesterYear.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Report\Notification.cs" />
     <Compile Include="Report\PdfReport.cs" />
     <Compile Include="Utility\SessionFilter.cs" />
   </ItemGroup>
@@ -601,8 +602,8 @@
     <Content Include="Views\Data\Department.cshtml" />
     <Content Include="Views\Data\Building.cshtml" />
     <Content Include="Views\Data\Branch.cshtml" />
-    <Content Include="Views\ExportExcel\Index.cshtml" />
     <Content Include="Views\PdfExport\Index.cshtml" />
+    <Content Include="Views\ExportExcel\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
