--- a/TestExcel/TestExcel.csproj
+++ b/TestExcel/TestExcel.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Controllers\ImportExcelController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\PdfExportController.cs" />
+    <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\TimeScheduleController.cs" />
     <Compile Include="Data\BRANCH.cs">
       <DependentUpon>SubjectDB.tt</DependentUpon>
@@ -217,8 +218,8 @@
     <Compile Include="Models\Department_Branch.cs" />
     <Compile Include="Models\Section_Subject.cs" />
     <Compile Include="Models\SemesterYear.cs" />
+    <Compile Include="Models\TimeCrash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Report\Notification.cs" />
     <Compile Include="Report\PdfReport.cs" />
     <Compile Include="Utility\SessionFilter.cs" />
   </ItemGroup>
@@ -607,6 +608,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Report\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
