--- a/TestExcel/TestExcel.csproj
+++ b/TestExcel/TestExcel.csproj
@@ -605,10 +605,10 @@
     <Content Include="Views\Data\Branch.cshtml" />
     <Content Include="Views\PdfExport\Index.cshtml" />
     <Content Include="Views\ExportExcel\Index.cshtml" />
+    <Content Include="Views\Report\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Report\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
