--- a/TestExcel/packages.config
+++ b/TestExcel/packages.config
@@ -2,8 +2,12 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="ClosedXML" version="0.93.1" targetFramework="net461" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="EPPlus" version="4.5.2.1" targetFramework="net461" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net461" />
+  <package id="FastMember.Signed" version="1.3.0" targetFramework="net461" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
   <package id="iTextSharp" version="5.5.13" targetFramework="net461" />
   <package id="itextsharp.xmlworker" version="5.5.13" targetFramework="net461" />
@@ -36,5 +40,7 @@
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net461" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
