--- a/TestExcel/TestExcel.csproj
+++ b/TestExcel/TestExcel.csproj
@@ -416,6 +416,7 @@
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\fullcalendar.min.css" />
     <Content Include="Content\fullcalendar.print.min.css" />
+    <Content Include="Content\import\kmutnb-logo.png" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\Style.css" />
     <Content Include="Content\themes\base\accordion.css" />
