--- a/TestExcel/TestExcel.csproj
+++ b/TestExcel/TestExcel.csproj
@@ -640,6 +640,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="LogFile\" />
     <Folder Include="Views\Search\" />
   </ItemGroup>
   <ItemGroup>
